infra/kubernetes/manifests/monitoring-ingress/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: monitoring-middleware
  namespace: monitoring
spec:
  basicAuth:
    secret: monitoring-auth
    removeHeader: true
