infra/kubernetes/manifests/monitoring-ingress/prometheus-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: monitoring-middleware@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-https
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - prometheus.memo.sehindemi.com
      secretName: prometheus-tls

  rules:
    - host: prometheus.memo.sehindemi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-prometheus
                port:
                  number: 9090
